nifihealth/nifihealth-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nifi
  namespace: default
  labels:
    name: nifi
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/upstream-vhost: "localhost:8443"
    nginx.ingress.kubernetes.io/proxy-redirect-from: "https://localhost:8443"
    nginx.ingress.kubernetes.io/proxy-redirect-to: "https://nifi.example.com"
spec:
  tls:
  - hosts:
    - nifi.example.com
    secretName: nifi-secret-tls
  rules:
  - host: nifi.example.com
    http:
      paths:
      - path: "/"
        backend:
            serviceName: nifihealth
            servicePort: 8443
